--- a/src/components/navbarForTalk&bdv/NavbarTwoStyles.css
+++ b/src/components/navbarForTalk&bdv/NavbarTwoStyles.css
@@ -1,17 +1,17 @@
-.navbarTwo {
+.navbar {
     width: 100%;
     height: 100px;
     position: fixed;
     z-index: 5;
 }
 
-.navbarTwo .containerTwo {
+.navbar .container {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-.navbarTwo .logo {
+.navbar .logo {
     width: 120px;
     height: 120px;
     display: flex;
@@ -40,10 +40,10 @@
 .nav-menu {
     display: flex;
     margin-top: -25px;
-}
-
-
-
+  }
+  
+  
+  
 
 .nav-menu li {
     padding: 2rem;
@@ -132,10 +132,9 @@
 }
 
 
-.language-dropdownTwo {
+.language-dropdown {
     position: relative;
     display: inline-block;
-    margin-left: 69rem;
 }
 
 .selected-language {
@@ -180,16 +179,16 @@
     background-color: #f2f2f2;
 }
 
-.language-dropdownTwo:hover .language-options {
+.language-dropdown:hover .language-options {
     display: block;
 }
 
 
 
-.navbarTwo.scrolled {
+.navbar.scrolled {
     background-color: rgb(222, 245, 255);
-}
-
+  }
+  
 
 
 @media screen and (max-width: 940px) {
@@ -227,7 +226,7 @@
     .selected-language {
         color: #fff;
     }
-
+    
     .selected-language span {
         color: #fff;
     }
@@ -245,7 +244,7 @@
         bottom: 8px;
         left: 10px;
     }
-
+    
     .animated-ligne:hover::after {
         width: calc(100% - 2rem);
     }
@@ -263,6 +262,8 @@
     }
 
 
+
+
     .nav-menu .social-icons {
         display: flex;
         justify-content: space-evenly;
@@ -275,7 +276,7 @@
         font-size: 1.4rem;
     }
 
-    .nav-menu .icon:hover {
+    .nav-menu .icon:hover{
         color: #211B59;
     }
 
@@ -283,14 +284,14 @@
         display: none;
     }
 
-    .navbarTwo .slide-right {
+    .navbar .slide-right {
         margin-left: 45%;
         transition: .8s ease-in-out;
     }
 
 
     .language-options {
-
+        
         width: 100px;
         margin-left: 15px;
     }
@@ -301,14 +302,11 @@
         cursor: pointer;
     }
 
-    .navbarTwo.scrolled {
+    .navbar.scrolled {
         display: none;
-    }
-
-    .language-dropdownTwo {
-        margin-left: 0rem;
-    }
-
+      }
+      
+    
 }
 
 @media screen and (max-width: 495px) {
@@ -316,12 +314,14 @@
         width: 75%;
     }
 
-    .navbarTwo .slide-right {
+    .navbar .slide-right {
         margin-left: 30%;
     }
-
-    .navbarTwo.scrolled {
+    .navbar.scrolled {
         display: none;
-    }
+      }
 
 }
+
+
+
